--- a/test/reports/TEST-Request-get-index-request.xml
+++ b/test/reports/TEST-Request-get-index-request.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <testsuites>
-  <testsuite name="Request::get-index.request" filepath="spec/http_parser_spec.rb" skipped="0" failures="0" errors="0" tests="3" assertions="4" time="0.002109999768435955">
-    <testcase name="test_0001_parses the http method" lineno="11" classname="Request::get-index.request" assertions="1" time="0.000856699887663126" file="spec/http_parser_spec.rb">
+  <testsuite name="request::get-index.request" filepath="spec/http_parser_spec.rb" skipped="0" failures="0" errors="0" tests="3" assertions="4" time="0.000502900016726926">
+    <testcase name="test_0002_parses the resource" lineno="14" classname="request::get-index.request" assertions="1" time="0.0002564000023994595" file="spec/http_parser_spec.rb">
     </testcase>
-    <testcase name="test_0002_parses the resource" lineno="15" classname="Request::get-index.request" assertions="1" time="0.000552099896594882" file="spec/http_parser_spec.rb">
+    <testcase name="test_0003_parses the headers" lineno="17" classname="request::get-index.request" assertions="2" time="0.00015249999705702066" file="spec/http_parser_spec.rb">
     </testcase>
-    <testcase name="test_0003_parses the headers" lineno="18" classname="Request::get-index.request" assertions="2" time="0.000701199984177947" file="spec/http_parser_spec.rb">
+    <testcase name="test_0001_parses the http method" lineno="10" classname="request::get-index.request" assertions="1" time="9.400001727044582e-05" file="spec/http_parser_spec.rb">
     </testcase>
   </testsuite>
 </testsuites>
