--- a/test/reports/TEST-serve.xml
+++ b/test/reports/TEST-serve.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <testsuites>
-  <testsuite name="serve" filepath="spec/http_server_spec.rb" skipped="0" failures="0" errors="0" tests="1" assertions="2" time="0.047521800006506965">
-    <testcase name="test_0001_adding route works" lineno="15" classname="serve" assertions="2" time="0.047521800006506965" file="spec/http_server_spec.rb">
+  <testsuite name="serve" filepath="spec/http_server_spec.rb" skipped="0" failures="0" errors="0" tests="5" assertions="9" time="0.31731940002646297">
+    <testcase name="test_0004_serves static html files" lineno="57" classname="serve" assertions="2" time="0.08233480001217686" file="spec/http_server_spec.rb">
+    </testcase>
+    <testcase name="test_0002_serves static txt files" lineno="27" classname="serve" assertions="2" time="0.06445490001351573" file="spec/http_server_spec.rb">
+    </testcase>
+    <testcase name="test_0003_serves static gif files" lineno="42" classname="serve" assertions="2" time="0.06299969999236055" file="spec/http_server_spec.rb">
+    </testcase>
+    <testcase name="test_0001_adding route works" lineno="15" classname="serve" assertions="2" time="0.048253699991619214" file="spec/http_server_spec.rb">
+    </testcase>
+    <testcase name="test_0005_returns 404 for nonexistent file" lineno="74" classname="serve" assertions="1" time="0.05927630001679063" file="spec/http_server_spec.rb">
     </testcase>
   </testsuite>
 </testsuites>
