--- a/examples/simple custom 404/404/404.css
+++ b/examples/simple custom 404/404/404.css
@@ -180,7 +180,7 @@ input,
 select,
 textarea {
   font-family: "Montserrat", Helvetica, sans-serif;
-  color: #bbb;
+  color: black;
 }
 h1 {
   text-align: center;
