--- a/test/reports/TEST-Request-get-examples-request.xml
+++ b/test/reports/TEST-Request-get-examples-request.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <testsuites>
-  <testsuite name="request::get-examples.request" filepath="spec/request_spec.rb" skipped="0" failures="0" errors="0" tests="4" assertions="7" time="0.0004537000204436481">
-    <testcase name="test_0001_parses the http method" lineno="29" classname="request::get-examples.request" assertions="1" time="0.00014110002666711807" file="spec/request_spec.rb">
+  <testsuite name="request::get-examples.request" filepath="spec/request_spec.rb" skipped="0" failures="0" errors="0" tests="4" assertions="7" time="0.0007200000109151006">
+    <testcase name="test_0004_parses the headers" lineno="40" classname="request::get-examples.request" assertions="4" time="0.0003233000170439482" file="spec/request_spec.rb">
     </testcase>
-    <testcase name="test_0002_parses the version" lineno="33" classname="request::get-examples.request" assertions="1" time="0.00010579999070614576" file="spec/request_spec.rb">
+    <testcase name="test_0003_parses the resource" lineno="37" classname="request::get-examples.request" assertions="1" time="0.0001235000090673566" file="spec/request_spec.rb">
     </testcase>
-    <testcase name="test_0004_parses the headers" lineno="40" classname="request::get-examples.request" assertions="4" time="0.00011149997590109706" file="spec/request_spec.rb">
+    <testcase name="test_0002_parses the version" lineno="33" classname="request::get-examples.request" assertions="1" time="9.290000889450312e-05" file="spec/request_spec.rb">
     </testcase>
-    <testcase name="test_0003_parses the resource" lineno="37" classname="request::get-examples.request" assertions="1" time="9.53000271692872e-05" file="spec/request_spec.rb">
+    <testcase name="test_0001_parses the http method" lineno="29" classname="request::get-examples.request" assertions="1" time="0.0001802999759092927" file="spec/request_spec.rb">
     </testcase>
   </testsuite>
 </testsuites>
