--- a/test/reports/TEST-Request-post-login-request.xml
+++ b/test/reports/TEST-Request-post-login-request.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <testsuites>
-  <testsuite name="request::post-login.request" filepath="spec/request_spec.rb" skipped="0" failures="0" errors="0" tests="5" assertions="8" time="0.0008676000870764256">
-    <testcase name="test_0003_parses the version" lineno="82" classname="request::post-login.request" assertions="1" time="0.0002389000728726387" file="spec/request_spec.rb">
+  <testsuite name="request::post-login.request" filepath="spec/request_spec.rb" skipped="0" failures="0" errors="0" tests="5" assertions="8" time="0.0017158000000563334">
+    <testcase name="test_0001_parses the http method" lineno="74" classname="request::post-login.request" assertions="1" time="0.00044609999986278126" file="spec/request_spec.rb">
     </testcase>
-    <testcase name="test_0004_parses the headers" lineno="86" classname="request::post-login.request" assertions="3" time="0.00015709991566836834" file="spec/request_spec.rb">
+    <testcase name="test_0003_parses the version" lineno="82" classname="request::post-login.request" assertions="1" time="0.0002279999998791027" file="spec/request_spec.rb">
     </testcase>
-    <testcase name="test_0005_parses the params" lineno="92" classname="request::post-login.request" assertions="2" time="0.0002471000188961625" file="spec/request_spec.rb">
+    <testcase name="test_0005_parses the params" lineno="92" classname="request::post-login.request" assertions="2" time="0.0002911000001404318" file="spec/request_spec.rb">
     </testcase>
-    <testcase name="test_0002_parses the resource" lineno="78" classname="request::post-login.request" assertions="1" time="0.00013100006617605686" file="spec/request_spec.rb">
+    <testcase name="test_0004_parses the headers" lineno="86" classname="request::post-login.request" assertions="3" time="0.0001731000002109795" file="spec/request_spec.rb">
     </testcase>
-    <testcase name="test_0001_parses the http method" lineno="74" classname="request::post-login.request" assertions="1" time="9.350001346319914e-05" file="spec/request_spec.rb">
+    <testcase name="test_0002_parses the resource" lineno="78" classname="request::post-login.request" assertions="1" time="0.0005774999999630381" file="spec/request_spec.rb">
     </testcase>
   </testsuite>
 </testsuites>
